3.6/anypoint-platform-for-apis/walkthrough-deploy-to-runtime.adoc
= Deploy Your API to a Mule Runtime

[NOTE]
====
This page is part of the Anypoint Platform for APIs walkthrough. If you landed here by mistake and you're not sure where to start, go to the link:/documentation/display/current/Anypoint+Platform+for+APIs+Walkthrough[walkthough introduction] to learn more.

Looking for a user guide on deployment in the Anypoint Platform? See link:/documentation/display/current/Deploying+Your+API+or+Proxy[Deploying Your API or Proxy].
====

== Before You Begin

This step in the walkthrough assumes that *you have completed building an APIkit project* in the link:/documentation/display/current/Walkthrough+Build[Build] step. Your APIkit project should be saved as a deployable zip file. If you didn't create your own APIkit project but you want to jump in here, you can download and use **link:/documentation/download/attachments/122752474/my-raml-implementation.zip?version=1&modificationDate=1405707403299[this project]**.

It also assumes **you have decided to deploy your API to a Mule runtime, rather than directly to an API Gateway**, to separate out the implementation of your API from the orchestration. If you want to deploy directly to an API Gateway, you can link:/documentation/display/current/Walkthrough+Deploy+to+Gateway[do that instead].

To deploy to a Mule on-premises runtime, see link:/documentation/display/current/Downloading+and+Starting+Mule+ESB[the instructions] to download and install the runtime before proceeding. To deploy CloudHub, link:/documentation/display/current/CloudHub[sign up for a CloudHub account] and you have at least one available worker in your trial or subscription.

== Deploying

Deploy your APIkit project to a Mule runtime of your choice.

[NOTE]
Note that, for the purposes of this walkthrough, you can deploy the API to a runtime running on your localhost machine and continue testing. However, in order to make your API accessible to other Anypoint Platform users or to the API Console (which accesses your API through a Web proxy), your API must be implemented on a server location that is accessible via the Web. For this reason, we recommend that you deploy to a runtime on CloudHub or to a server with an IP address that can be accessed from the Web.

=== On-Premises Mule Runtime [TAB]

. Start Mule in the command line by running: +
+
Windows: `<MULE_HOME>\bin\mule`
+
Mac and Unix: `<MULE_HOME>/bin/mule`
+
[TIP]
*`<MULE_HOME`>* is the value of the MULE_HOME variable employed by Mule ESB, usually the root directory of the installation, such as `/opt/Mule/mule-standalone-3.6.0/`

. Navigate to the directory where the .zip file is located and copy the .zip file. Ensure that your copy of the file does not have any spaces in the name. 
. Drop the copy of the .zip file into the *`<MULE_HOME>/apps`* folder.
. Mule polls this folder for new applications every five seconds. Watch your command line window to track the progress of the deployment.
. When you see the message `Started app 'TshirtService'`, then your API is deployed to the Mule runtime.

If you wish to undeploy your application, navigate to the `app` directory and delete the file `your_application.txt`. This removes your application from the `/app` directory, which automatically undeploys it.

=== Cloud Mule Runtime [TAB]

. https://cloudhub.io/login.html[Log in] to your CloudHub account.
. First, ensure that you are in the environment that you wish to deploy to. If necessary, click your username, then click *Switch environment* . 
. Once you are in the correct environment, click *Add application*.
+
image:/documentation/download/attachments/122752474/CHapplications.png?version=1&modificationDate=1420729408441[image]

. In the New Application screen, give your API a unique domain name. For example, `Tshirt-API-Implementation`. If that's taken, try adding your initials to make it unique.
. Click *Add Application*.
. In the Application screen, click *Choose file* to locate the .zip file of your API.
. Select the latest Mule runtime from the drop-down.
. Click *Apply changes* and *Start*.
. Use the *Logs* view to track the status of a deployment:
+
image:/documentation/download/attachments/122752474/LogView.png?version=1&modificationDate=1420730675868[image]

. Congratulations! Your API is deployed.

To stop your application, click the *Settings* tab and click *Cancel deployment*.

== Next

Congratulations, your API is now up and running on a Mule runtime. Proceed to link:/documentation/display/current/Walkthrough+Proxy[Create a Proxy for Your API].
