3.7/anypoint-platform-for-apis/walkthrough-deploy-to-runtime.adoc
= Deploy Your API to a Mule Runtime
:keywords: deploy, api, runtime, apikit, gateway

[NOTE]
====
This page is part of the Anypoint Platform for APIs walkthrough. If you landed here by mistake and you're not sure where to start, go to the link:/docs/display/current/Anypoint+Platform+for+APIs+Walkthrough[walkthough introduction] to learn more.

Looking for a user guide on deployment in the Anypoint Platform? See link:/docs/display/current/Deploying+Your+API+or+Proxy[Deploying Your API or Proxy].
====

== Before You Begin

This step in the walkthrough assumes that *you have completed building an APIkit project* in the link:/docs/display/current/Walkthrough+Build[Build] step. Your APIkit project should be saved as a deployable zip file. If you didn't create your own APIkit project but you want to jump in here, you can download and use **link:/docs/download/attachments/122752474/my-raml-implementation.zip?version=1&modificationDate=1405707403299[this project]**.

It also assumes **you have decided to deploy your API to a Mule runtime, rather than directly to an API Gateway**, to separate out the implementation of your API from the orchestration. If you want to deploy directly to an API Gateway, you can link:/docs/display/current/Walkthrough+Deploy+to+Gateway[do that instead].

To deploy to a Mule on-premises runtime, see link:/docs/display/current/Downloading+and+Starting+Mule+ESB[the instructions] to download and install the runtime before proceeding. To deploy CloudHub, link:/docs/display/current/CloudHub[sign up for a CloudHub account] and you have at least one available worker in your trial or subscription.

== Deploying

Deploy your APIkit project to a Mule runtime of your choice.

[NOTE]
Note that, for the purposes of this walkthrough, you can deploy the API to a runtime running on your localhost machine and continue testing. However, in order to make your API accessible to other Anypoint Platform users or to the API Console (which accesses your API through a Web proxy), your API must be implemented on a server location that is accessible via the Web. For this reason, we recommend that you deploy to a runtime on CloudHub or to a server with an IP address that can be accessed from the Web.

[tabs]
------
[tab,title="On-Premises Mule Runtime"]
....

. If you have not downloaded the Mule standalone runtime, click https://developer.mulesoft.com/docs/display/current/Installing[here] and follow the steps to install the latest version.
. Start Mule in the command line by running:
+
Windows: `<MULE_HOME>\bin\mule`
+
Mac and Unix: `<MULE_HOME>/bin/mule`
+
[TIP]
*`<MULE_HOME`>* is the value of the MULE_HOME variable employed by Mule ESB, usually the root directory of the installation, such as `/opt/Mule/mule-standalone-3.6.0/`

. Navigate to the directory where the .zip file is located and copy the .zip file. Ensure that your copy of the file does not have any spaces in the name. 
. Drop the copy of the .zip file into the *`<MULE_HOME>/apps`* folder.
. Mule polls this folder for new applications every five seconds. Watch your command line window to track the progress of the deployment.
. When you see the message `Started app 'TshirtService'`, then your API is deployed to the Mule runtime.

If you wish to undeploy your application, navigate to the `app` directory and delete the file `your_application.txt`. This removes your application from the `/app` directory, which automatically undeploys it.

....
[tab,title="Cloud Mule Runtime"]
....

. Note that your project has a node in the Package Explorer. Right-click on the project node and then click CloudHub > Deploy to CloudHub from the cascading menu.
+
image:https://lh5.googleusercontent.com/hX7oXVfWuE-w9lzKNu1A-TsFkDDidRgalP8L-JPufeCYxetaIe45GSddNtKU5VCzDzzed1FMBvtLaXAGDv1gujoeYW44B2tGGIQXKdURJ8tHPAV7W9stZpbTtAE6QpKah0cwkV0[image]
+

. If this is your first time deploying in this way, a popup menu asks you to provide your login credentials for CloudHub. Studio stores your credentials and uses them automatically the next time you deploy to CloudHub. You can manage these credentials through the Studio Preferences menu, in Anypoint Studio > Authentication.
. After you sign in, the Deploy to CloudHub menu opens. Choose a unique domain in which to deploy the application. In this case, we enter helloworld (however, you can choose your own unique domain of up to 42 characters in length). When you choose a unique domain name, a green confirmation check mark displays. 
. Select an Environment and a Mule Version.
. Note: After you add your domain name, the Mule Version fills in automatically. Click Finish.image:https://lh6.googleusercontent.com/xGO6rpNi0VfUx7bUoohpG4ZuQnMLJ0E-5egNk4Uu43Gfp6ClfXG_mCdyxfGZhdYoRmc0JGJIbSDvYvaDvbFzVBLUYk3a7aVEh3HESzF0N_OPlwe5UyDpvQ42w5mXolFS-pbyB0E[image] 

. Anypoint Studio packages, uploads, and deploys your application to CloudHub.
. Browse to the URL of yourdomain.cloudhub.io (also shown in the pop-up window above). You should see your application running on CloudHub! (Deployment may take a few minutes.)
. Congratulations! Your API is deployed.

To stop your application, click the *Settings* tab and click *Cancel deployment*.

....
------

= *Next*

Congratulations, your API is now up and running on a Mule runtime. Proceed to link:/docs/display/current/Walkthrough+Proxy[Create a Proxy for Your API].
